[gd_scene load_steps=5 format=3 uid="uid://cupwjts5t5aua"]

[ext_resource type="Script" path="res://passive_description_panel.gd" id="1_swptf"]
[ext_resource type="Texture2D" uid="uid://8joma6ftgyhh" path="res://Assets/GUI/medium.png" id="2_qpqi8"]
[ext_resource type="Texture2D" uid="uid://cm1l266el6dvl" path="res://Assets/GUI/square_button.png" id="4_57wkg"]
[ext_resource type="FontFile" uid="uid://uqx0pemtyyk7" path="res://Themes/zekton rg.otf" id="4_vpjiy"]

[node name="PassivePanel" type="Node2D"]
script = ExtResource("1_swptf")

[node name="TallPanel" type="Sprite2D" parent="."]
position = Vector2(1.29574, 1.62759)
scale = Vector2(0.4, 0.4)
texture = ExtResource("2_qpqi8")
centered = false

[node name="DescriptionName" type="Label" parent="."]
offset_left = 53.3692
offset_top = 10.3316
offset_right = 298.369
offset_bottom = 56.3316
theme_override_font_sizes/font_size = 16
text = "Passive"
horizontal_alignment = 1
autowrap_mode = 2

[node name="DescriptionLabel" type="Label" parent="."]
offset_left = 16.0223
offset_top = 59.3629
offset_right = 316.022
offset_bottom = 141.362
theme_override_fonts/font = ExtResource("4_vpjiy")
theme_override_font_sizes/font_size = 15
text = "None"
autowrap_mode = 2

[node name="Passive" type="Sprite2D" parent="."]
position = Vector2(17.6615, 15.4955)
scale = Vector2(0.4, 0.4)
texture = ExtResource("4_57wkg")

[node name="Label" type="Label" parent="Passive"]
offset_left = -37.9208
offset_top = -57.4023
offset_right = -12.9208
offset_bottom = -20.4023
scale = Vector2(3, 3)
theme_override_font_sizes/font_size = 30
text = "P"
horizontal_alignment = 1
vertical_alignment = 1
